--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,19 @@
         <karate.version>1.5.0.RC1</karate.version>
     </properties>    
 
-    <dependencies>         
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
         <dependency>
             <groupId>io.karatelabs</groupId>
             <artifactId>karate-junit5</artifactId>
             <version>${karate.version}</version>
             <scope>test</scope>
-        </dependency>		
+        </dependency>
     </dependencies>
 
     <build>
